--- a/requirements.txt
+++ b/requirements.txt
@@ -2,4 +2,9 @@ asgiref==3.7.2
 Django==4.2.7
 sqlparse==0.4.4
 tzdata==2023.3
-psycopg
+psycopg2
+Pillow
+djangorestframework
+django-filter
+djangorestframework-gis
+django-leaflet
